--- a/Resources/views/template.html.twig
+++ b/Resources/views/template.html.twig
@@ -21,7 +21,7 @@
     <div class="header">
         <div class="header_resize">
             <div class="logo">
-                <h1 style="width: 300px; float: left;"><a
+                <h1 style="width:auto; float: left;"><a
                             href="javascript:void(0)">{{ stiwl_page_config.enterprise.name }}
                         <small>{{ stiwl_page_config.enterprise.business }}
                             | {{ stiwl_page_config.enterprise.slogan }}</small>
